5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1578_1330.log
== TEST (2019-03-14 18:26:03) 
-- CODE:
print(round(250, 2)/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:26:07) 
-- CODE:
print(round(250, 2)/6)
-- EXECUTION TIME:
0.154695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:27:10) 
-- CODE:
print(round(250/6,2)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:27:27) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:27:31) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.286795
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
